MGDCTRS-2024: Support Smart Event Processors in the Data Plane
