# internal/connector/internal/api/dbapi/kafka.go
@@ -1,0 +1,6 @@
+package dbapi
+
+type KafkaConnectionSettings struct {
+	KafkaID         string `gorm:"column:id"`
+	BootstrapServer string
+}
