# internal/connector/internal/api/private/model_error_handler_dead_letter_queue.go
@@ -1,0 +1,15 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ErrorHandlerDeadLetterQueue struct for ErrorHandlerDeadLetterQueue
+type ErrorHandlerDeadLetterQueue struct {
+	DeadLetterQueue ErrorHandlerDeadLetterQueueDeadLetterQueue `json:"dead_letter_queue"`
+}
