# internal/connector/internal/api/private/model_processor_deployment.go
@@ -1,0 +1,20 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ProcessorDeployment Holds the deployment configuration of a processor
+type ProcessorDeployment struct {
+	Id       string                           `json:"id,omitempty"`
+	Kind     string                           `json:"kind,omitempty"`
+	Href     string                           `json:"href,omitempty"`
+	Metadata ProcessorDeploymentAllOfMetadata `json:"metadata,omitempty"`
+	Spec     ProcessorDeploymentSpec          `json:"spec,omitempty"`
+	Status   ProcessorDeploymentStatus        `json:"status,omitempty"`
+}
