# internal/connector/internal/api/private/model_processor_deployment_status.go
@@ -1,0 +1,18 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ProcessorDeploymentStatus The status of processor deployment
+type ProcessorDeploymentStatus struct {
+	Phase           ProcessorState                     `json:"phase,omitempty"`
+	ResourceVersion int64                              `json:"resource_version,omitempty"`
+	Operators       ConnectorDeploymentStatusOperators `json:"operators,omitempty"`
+	Conditions      []MetaV1Condition                  `json:"conditions,omitempty"`
+}
