# internal/connector/internal/api/private/model_processor_desired_state.go
@@ -1,0 +1,20 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ProcessorDesiredState the model 'ProcessorDesiredState'
+type ProcessorDesiredState string
+
+// List of ProcessorDesiredState
+const (
+	PROCESSORDESIREDSTATE_READY   ProcessorDesiredState = "ready"
+	PROCESSORDESIREDSTATE_STOPPED ProcessorDesiredState = "stopped"
+	PROCESSORDESIREDSTATE_DELETED ProcessorDesiredState = "deleted"
+)
