# internal/connector/internal/api/private/model_processor_state.go
@@ -1,0 +1,26 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ProcessorState the model 'ProcessorState'
+type ProcessorState string
+
+// List of ProcessorState
+const (
+	PROCESSORSTATE_PREPARING      ProcessorState = "preparing"
+	PROCESSORSTATE_PROVISIONING   ProcessorState = "provisioning"
+	PROCESSORSTATE_READY          ProcessorState = "ready"
+	PROCESSORSTATE_UPDATING       ProcessorState = "updating"
+	PROCESSORSTATE_STOPPED        ProcessorState = "stopped"
+	PROCESSORSTATE_FAILED         ProcessorState = "failed"
+	PROCESSORSTATE_DEPROVISIONING ProcessorState = "deprovisioning"
+	PROCESSORSTATE_DELETING       ProcessorState = "deleting"
+	PROCESSORSTATE_DELETED        ProcessorState = "deleted"
+)
